// $Id$
// $Name$

Image Picker  for D6 in DRUPAL-6--2, 20010-08-09
by hutch, fixed public groups bug #873094
added js to public groups form

Image Picker  for D6 in DRUPAL-6--2, 20010-08-02
------------------------------------
by hutch, fixed groups paging, improved theming,
added config for table paging.

Image Picker  for D6 in DRUPAL-6--2, 20010-07-10
------------------------------------
by hutch, added menu access callback functions

Image Picker  for D6 in DRUPAL-6--2, 20010-06-14
------------------------------------
by hutch, replaced include_once with module_load_include

Image Picker  for D6 in DRUPAL-6--2, 20010-06-09
------------------------------------
by hutch, added class imgp_img to inserted image
replaced split() with explode()

Image Picker  for D6 in DRUPAL-6--2, 20010-05-15
------------------------------------
by hutch, added public select box,
changed hidden formfields to 'value'

Image Picker  for D6 in DRUPAL-6--2, 20010-05-14
------------------------------------
by hutch, added external hook 'imagepicker_upload_extra'

Image Picker  for D6 in DRUPAL-6--2, 20010-05-13
------------------------------------
by hutch, fixed issues in #796524, #797612, added icons to admin/groups

Image Picker  for D6 in DRUPAL-6--2, 20010-05-11
------------------------------------
by hutch, added suggested improvement, issue #795346

Image Picker  for D6 in DRUPAL-6--2, 20010-04-28
------------------------------------
by hutch, added support for Colorbox iframe

Image Picker  for D6 in DRUPAL-6--2, 20010-04-24
------------------------------------
by hutch, added support for Colorbox module

Image Picker  for D6 in DRUPAL-6--2, 20010-02-25
------------------------------------
by hutch, Drupal.behaviors applied to js

Image Picker  for D6 in DRUPAL-6--2, 20010-02-17
------------------------------------
by hutch, fixed bug in admin watermarks validation

Image Picker  for D6 in DRUPAL-6--2, 20010-02-13
------------------------------------
by hutch, added icons
